# swe520-fedlearn-agentic-hpo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.flwr/: config.toml
configs/: agentic_hpo.pkl  baseline.pkl  federated_sgd.pkl  model_meta.json  preprocessor.pkl
results/docs/: 2026-03-10_convergence_charts.xlsx  2026-03-10_stats_tables.xlsx  stats_tables.xlsx  swe520_chart_template.crtx
results/logs/: 2026-03-14_agentic_hpo_20rounds.txt  2026-03-14_agentic_hpo_40rounds.txt  2026-03-14_baseline_20rounds.txt  2026-03-14_baseline_40rounds.txt  2026-03-14_static_hpo_20rounds_15trials.txt  2026-03-14_static_hpo_40rounds_15trials.txt
src/fedlearn/agentic_hpo/: __init__.py  client_app.py  server_app.py
src/fedlearn/common/: annotation.py  config.py  data_split.py  evaluation.py  logging_config.py  metrics.py  model.py  preprocessing.py
src/fedlearn/federated/: utils.py
src/fedlearn/hpo/: agents.py  client_app.py  runners.py  server_app.py
src/fedlearn/tools/: compute_model_metadata.py
